--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,11 @@ else()
     message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfma")
 
 foreach(val ${CMAKE_CXX_FLAGS})
     message(${val})
@@ -30,9 +33,11 @@ endforeach()
 message("\n")
 set(PROJECT_LINK_LIBS "")
 list(APPEND PROJECT_LINK_LIBS ${CMAKE_THREAD_LIBS_INIT})
+list(APPEND PROJECT_LINK_LIBS -lopenblas)
 
 list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)
 list(APPEND INCLUDE_DIRS /usr/local/cuda/include)
+list(APPEND INCLUDE_DIRS /usr/include/openblas)
 list(APPEND LINK_DIRS /usr/local/cuda/lib64)
 
 include_directories(${INCLUDE_DIRS})
@@ -41,3 +46,4 @@ link_directories(${LINK_DIRS})
 add_subdirectory(sse-study)
 add_subdirectory(utilities)
 add_subdirectory(simple)
+add_subdirectory(matrix-multiply)
