--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfma")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfma")
 
 foreach(val ${CMAKE_CXX_FLAGS})
     message(${val})
@@ -35,15 +35,20 @@ set(PROJECT_LINK_LIBS "")
 list(APPEND PROJECT_LINK_LIBS ${CMAKE_THREAD_LIBS_INIT})
 list(APPEND PROJECT_LINK_LIBS -lopenblas)
 
+set(CUDA_PATH "/home/xzgz/code-temp/cuda")
 list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)
-list(APPEND INCLUDE_DIRS /usr/local/cuda/include)
+list(APPEND INCLUDE_DIRS ${CUDA_PATH}/include)
 list(APPEND INCLUDE_DIRS /usr/include/openblas)
-list(APPEND LINK_DIRS /usr/local/cuda/lib64)
+list(APPEND LINK_DIRS ${CUDA_PATH}/lib64)
 
 include_directories(${INCLUDE_DIRS})
 link_directories(${LINK_DIRS})
 
-add_subdirectory(sse-study)
-add_subdirectory(utilities)
-add_subdirectory(simple)
-add_subdirectory(matrix-multiply)
+#add_subdirectory(cuda-utils)
+#add_subdirectory(use-cudalib)
+#add_subdirectory(sse-study)
+#add_subdirectory(utilities)
+#add_subdirectory(matrix-multiply)
+#add_subdirectory(simple)
+#add_subdirectory(chapter03)
+add_subdirectory(chapter04)
