--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     message(STATUS "CMAKE_COMPILER_IS_GNUCXX")
     set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11")
 endif()
-set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -arch=sm_75")
+set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -arch=sm_80")
 message(STATUS "CUDA_NVCC_FLAGS: ${CUDA_NVCC_FLAGS}")
 
 find_package(Threads REQUIRED)
@@ -53,13 +53,14 @@ list(APPEND PROJECT_LINK_LIBS cuda-lib)
 
 set(CUDA_PATH "/usr/local/cuda")
 list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/src/include)
+list(APPEND INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/src/include/cutlass_git/tools/util/include)
 list(APPEND INCLUDE_DIRS ${CUDA_PATH}/include)
 list(APPEND LINK_DIRS ${CUDA_PATH}/lib64)
 
 include(${PROJECT_SOURCE_DIR}/thirdparty/OpenBLAS/build/install/share/cmake/OpenBLAS/OpenBLASConfig.cmake)
 set(OpenBLAS_PATH "${PROJECT_SOURCE_DIR}/thirdparty/OpenBLAS/build/install")
 list(APPEND INCLUDE_DIRS ${OpenBLAS_PATH}/include)
-list(APPEND LINK_DIRS ${OpenBLAS_PATH}/lib64)
+list(APPEND LINK_DIRS ${OpenBLAS_PATH}/lib)
 
 include_directories(${INCLUDE_DIRS})
 
@@ -79,4 +80,4 @@ add_subdirectory(src/utils)
 add_subdirectory(src/gpu-memory)
 #add_subdirectory(src/sparse-fwffm)
 #add_subdirectory(src/sparse-fipnn)
-add_subdirectory(src/cuda-texture)
+#add_subdirectory(src/cuda-texture)
